Implemented new test scenario for humidity properties. Added units (PERCENT) to humidity channels. Code clearead removed unnecessary anotaions, line continuations etc.
Signed-off-by: Václav Čejka <V.Cejka@seznam.cz>